crates/apollo-compiler/test_data/diagnostics/0093_fragment_validation_with_recursive_type_system.txt
Error: Transitively implemented interfaces must also be defined on an implementing interface or object
   ╭─[0093_fragment_validation_with_recursive_type_system.graphql:2:1]
   │
 2 │ ╭─▶ interface A implements B {
   ┆ ┆   
 5 │ ├─▶ }
   │ │       
   │ ╰─────── A must also be implemented here
 6 │     interface B implements A {
   │                            ┬  
   │                            ╰── implementation of A declared by B here
───╯
Error: Transitively implemented interfaces must also be defined on an implementing interface or object
   ╭─[0093_fragment_validation_with_recursive_type_system.graphql:6:1]
   │
 2 │     interface A implements B {
   │                            ┬  
   │                            ╰── implementation of B declared by A here
   │ 
 6 │ ╭─▶ interface B implements A {
   ┆ ┆   
 9 │ ├─▶ }
   │ │       
   │ ╰─────── B must also be implemented here
───╯

